<resources>
    <string name="app_name">Jobs 4 You</string>
    <string name="Title">Jobs 4 You</string>
    <string name="sub_title">To Find Your Dream Job</string>
    <string name="Register">Login</string>
    <string name="otp">Enter OTP</string>
    <string name="submit">Submit</string>
    <string name="help">Help</string>
    <string name="phone_number">Phone Number</string>
    <string name="enter_your_phone_number">Please Select Your Country \n And Enter Your Phone Number</string>
    <string name="send_otp">Send OTP</string>
    <string name="todo">TODO</string>
    <string name="phone">Phone</string>
    <string name="sign_out">sign out</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="retry">Retry</string>
    <string name="chat">Chat</string>
    <string name="applied">My Applications</string>
    <string name="job">Job</string>
    <string name="my_account">My Account</string>
    <string name="manage">Manage</string>
    <string name="login">Login</string>
    <string name="get_your_dream_job_here">Find Your Job Here</string>
    <string name="to_hire_your_staff">To Hire Your staff</string>
    <string name="click_here">Click Here..</string>
    <string name="hire_your_staff_here">Hire Your Staff Here</string>
    <string name="everyone_can_get_job_now">Everyone can get Job Now</string>
    <string name="finish">Finish</string>
    <string name="skip">Lets get started</string>
    <string name="lets_get_started">Lets get started</string>
    <string name="skip_next">skip</string>
    <string name="profile">Profile</string>
    <string name="resume">Resume</string>
    <string name="preferences">Add Details</string>
    <string name="user_name">User Name</string>
    <string name="education">Education &amp; Qualification </string>
    <string name="personal_details">Personal details</string>
    <string name="education_details">Education Details</string>
    <string name="add_basic_some_details">Please add some basic details</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email_address">Email Address</string>
    <string name="location">Job Location</string>
    <string name="name">Full Name</string>
    <string name="profession">Job Profession</string>
    <string name="female">Female</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="update">Update</string>
    <string name="look_the_part">Research by psychologists has shown that people decide what they think of you within the first four minutes of a first meting , so make sure that you look the part and have te perfect interview attire. </string>
    <string name="cancel">Cancel</string>
    <string name="personal_address"> Address </string>
    <string name="upload_your_resume_here">Upload Your Resume Here</string>
    <string name="name_mobile_number_and_email_id_is_important_in_resume">Name, Mobile number And Email Id is Important in Resume</string>
    <string name="click_to_upload_resume">Click to upload resume</string>
    <string name="only_in_pdf_and_doc">(only in Pdf and doc)</string>
    <string name="view_your_resume">Click to create Resume</string>
    <string name="dont_have_resume_n_create_resume_in_few_steps">do not have resume? \n create resume in few steps..</string>
    <string name="_91_1234567890">+91 1234567890 |</string>
    <string name="abc_gmail_com">abc@gmail.com</string>
    <string name="logout">Logout</string>
    <string name="help_support"><![CDATA[Help & support]]></string>
    <string name="privacy">Privacy</string>
    <string name="security">Security</string>
    <string name="interview_tips">Interview Tips</string>
    <string name="our_services">Our Services</string>
    <string name="add_resume_view_existing">View uploaded Resume</string>
    <string name="add_resume_re_upload_file">Upload new Resume</string>
    <string name="applications">Applications</string>
    <string name="job_seekers">Job Seekers</string>
    <string name="total_applications">Total Applications : 40</string>
    <string name="apply_for_job">Apply for job</string>
    <string name="get_hired">Get hired Now</string>
    <string name="get_applications">Get applications</string>
    <string name="hire_staff_now">Hire staff now</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="_1_look_the_part">1. LOOK THE PART</string>
    <string name="int_tips_title_1">1. Look the part</string>
    <string name="interview_tips_title_2">2. Do Your Research</string>
    <string name="int_tips_title3">3. Practice</string>
    <string name="int_tips_title_">4. Relax</string>
    <string name="int_tips_title_4">5. Be honest!</string>
    <string name="desc_1">Research by psychologists has shown that people decide what they think of you within the first four minutes of a first meting , so make sure that you look the part and have te perfect interview attire.</string>
    <string name="desc_2">\"learn about company from sources such as info published  on social media and website, news articles and reviews on Glass door from current and previous employees \"</string>
    <string name="desc_3">think about your skills and accomplishments that are relevant to the role and practice answering questions in a mock interview set up. Do not rehearse answers word for word, making a note of key point will suffice.</string>
    <string name="desc_4">Remind yourself that you have been invited to interview because te company believe you may be a good fit for the job based on information you hve provided</string>
    <string name="desc_5">The purpose of an interview is to meet you in person to determine whether your personality will be a fit for the company, so be honest with your answers.</string>
    <string name="all_fields_are_mandatory">All Fields are mandatory</string>
    <string name="total_applications_0">Total applications = 0</string>
    <string name="sorry_msg">Sorry, we dont have any jobs on this page currently. we will add more jobs soon.</string>
    <string name="about_me">About me</string>
    <string name="aboutMeMsg">I am hard working and dedicated person. I am energetic person. I am an excellent team worker. I am looking for opertunities in your company.</string>
    <string name="qualification">Qualification</string>
    <string name="school">School</string>
    <string name="school_medium">School Medium</string>
    <string name="how_i_speak_english">How I speak English</string>
    <string name="certificates">Certificates</string>
    <string name="basic_certificates">Basic certificates</string>
    <string name="skills">Skills</string>
    <string name="basic_skills">Basic skills</string>
    <string name="hobbies">Hobbies</string>
    <string name="title_activity_employer_dashboard">EmployerDashboard</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="dashboard_post_new_job">Post new Job</string>
    <string name="activity_title_post_job">Post New Job</string>
    <string name="post_job_company_profile">Company Profile</string>
    <string name="post_job_company_name">Company Name</string>
    <string name="post_job_company_address">Company Location</string>
    <string name="post_job_location">Job Location</string>
    <string name="post_job_description">Job Description</string>
    <string name="post_job_title">Job title/Post title</string>
    <string name="post_job_required_skills">Skills required</string>
    <string name="post_job_pay_scale">Pay Scale</string>
    <string name="post_job_pay_scale_note">Please input amount in INR and on per month basis.</string>
    <string name="activity_title_view_jobs">View Jobs</string>
    <string name="no_jobs_found">No jobs found</string>
    <string name="personal_information">Personal Information</string>
    <string name="add_company_logo">Add Company Logo</string>
    <string name="contact_details">HR Contact Details</string>
    <string name="hr_name">HR name</string>
    <string name="apply_now">Apply Now</string>
    <string name="call_now">Call Now</string>
    <string name="my_calls">My Calls</string>
    <string name="_4_0">4.0</string>
    <string name="know_more">Know More</string>
    <string name="view_jobseekers_here">View JobSeekers Here</string>
    <string name="view_posted_jobs">View Posted jobs</string>
    <string name="view_applications">View Applications</string>
    <string name="company_profile">Company Profile</string>
    <string name="change_company_logo">Change company logo</string>
    <string name="compnany_description">Compnany Description</string>
    <string name="number_of_employees">Number Of Employees</string>
    <string name="industry_type">Industry Type</string>
    <string name="perks_and_benifit">Perks and Benefits</string>
    <string name="minimum_qualification">Minimum Qualification</string>
</resources>