<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="50"
    tools:context=".modules.profile.AddResume"
    android:layout_margin="16dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="25"
        android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/upload_your_resume_here"
        android:textColor="@color/colorPrimary"
        android:fontFamily="@font/open_sans_semibold"
        android:textSize="25sp"
        android:layout_gravity="center"
        />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/gray"
            android:text="@string/name_mobile_number_and_email_id_is_important_in_resume"
            android:textSize="15sp"
            android:layout_marginTop="16dp"
            android:layout_gravity="center"
            />
    <Button
        android:id="@+id/selectFile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/primary_btn_bg"
        android:textColor="@color/white"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/click_to_upload_resume"
        android:layout_gravity="end"/>

    <TextView
        android:id="@+id/notify"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/only_in_pdf_and_doc"
        android:layout_gravity="end"
        />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="25">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textSize="15sp"
            android:textColor="@color/gray"
            android:text="@string/dont_have_resume_n_create_resume_in_few_steps"
            />
    <Button
        android:id="@+id/viewPdf"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/secondary_btn_bg"
        android:textColor="@color/black"
        android:layout_marginTop="16dp"
        android:text="@string/view_your_resume"
        android:gravity="center"
        android:drawableEnd="@drawable/ic_baseline_navigate_next_24"
        android:drawableStart="@drawable/ic_baseline_edit_24"
        android:drawablePadding="8dp"
        android:layout_gravity="end"/>
    </LinearLayout>

    </LinearLayout>
