<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".modules.profile.AddDetails">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/general_activity_padding">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="16dp"
            android:fontFamily="@font/open_sans_semi_bold"
            android:gravity="center"
            android:text="@string/add_basic_some_details"
            android:textColor="@color/colorPrimary"
            android:textSize="25sp" />

        <TextView
            style="@style/TextSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="16dp"
            android:fontFamily="@font/open_sans_semi_bold"
            android:gravity="center"
            android:text="@string/all_fields_are_mandatory"
            android:textColor="@color/black" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/AppTheme.TIL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:hint="@string/name">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/eTxtFirstName"
                style="@style/AppTheme.GeneralEditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_baseline_person_24" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/AppTheme.TIL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/profession">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/profession"
                style="@style/AppTheme.GeneralEditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_baseline_person_24"

                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/AppTheme.TIL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_address">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email"
                style="@style/AppTheme.GeneralEditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:drawableStart="@drawable/ic_baseline_email_24"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/AppTheme.TIL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/personal_address">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/address"
                style="@style/AppTheme.GeneralEditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_baseline_location_on_24" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/AppTheme.TIL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/location">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/location"
                style="@style/AppTheme.GeneralEditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_baseline_location_on_24" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            style="@style/AppTheme.TIL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:hint="@string/about_me">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/eTextAboutMe"
                style="@style/AppTheme.GeneralEditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/aboutMeMsg"
                android:drawableStart="@drawable/ic_baseline_info_24"
               />
        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/primary_btn_bg_enabled"
            android:padding="5dp"
            android:text="@string/submit"
            android:layout_marginTop="@dimen/general_section_top_margin"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <ProgressBar
            android:id="@+id/progressbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="gone" />
    </LinearLayout>

</ScrollView>