<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="20dp"
    android:gravity="center"
    android:background="@color/white"
    >
    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/no_internet"
        android:contentDescription="@string/app_name" />
    <TextView
        android:id="@+id/txt1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/no_internet_connection"
        android:fontFamily="@font/open_sans_bold"
        android:gravity="center"
        />
    <Button
        android:id="@+id/retry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="16dp"
        android:text="@string/retry"
        android:fontFamily="@font/open_sans_semibold"
        android:gravity="center"
        />

</LinearLayout>